testdata/baselines/reference/submodule/conformance/esDecorators-classExpression-missingEmitHelpers-classDecorator.16.errors.txt
main.ts(6,11): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.


==== main.ts (1 errors) ====
    export {};
    declare var dec: any;
    declare var x: any;
    
    // uses __esDecorate, __runInitializers, __setFunctionName, __propKey
    class C { [x] = @dec class {} }
              ~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
    
==== tslib.d.ts (0 errors) ====
    export {}
    